--- a/app/views/equipmentals/_form.html.erb
+++ b/app/views/equipmentals/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@equipment) do |f| %>
-  <% if @equipment.errors.any? %>
+<%= form_for(@equipmental) do |f| %>
+  <% if @equipmental.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@equipment.errors.count, "error") %> prohibited this equipment from being saved:</h2>
+      <h2><%= pluralize(@equipmental.errors.count, "error") %> prohibited this equipmental from being saved:</h2>
 
       <ul>
-      <% @equipment.errors.full_messages.each do |msg| %>
+      <% @equipmental.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
