--- a/app/views/equipmentals/index.html.erb
+++ b/app/views/equipmentals/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing equipmentals</h1>
+<h1>Equipment</h1>
 
 <table>
   <thead>
@@ -29,3 +29,7 @@
 <br>
 
 <%= link_to 'New Equipmental', new_equipmental_path %>
+
+<p>&nbsp;<br />&nbsp;</p>
+
+<%= link_to 'Home', root_url %>
