--- a/app/views/equipmentals/new.html.erb
+++ b/app/views/equipmentals/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New equipmental</h1>
+<h1>New Equipment</h1>
 
-<%= render 'form' %>
+<fieldset>
+  <legend>Enter new equiptment information</legend>
+  <%= render 'form' %>
+</fieldset>
 
 <%= link_to 'Back', equipmentals_path %>
