--- a/app/views/incidentals/index.html.erb
+++ b/app/views/incidentals/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing incidentals</h1>
+<h1>Incidentals</h1>
 
 <table>
   <thead>
@@ -27,3 +27,7 @@
 <br>
 
 <%= link_to 'New Incidental', new_incidental_path %>
+
+<p>&nbsp;<br />&nbsp;</p>
+
+<%= link_to 'Home', root_url %>
