--- a/app/views/incidentals/new.html.erb
+++ b/app/views/incidentals/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New incidental</h1>
+<h1>New Incidental</h1>
 
-<%= render 'form' %>
+<fieldset>
+  <legend>Enter new incidentals information</legend>
+  <%= render 'form' %>
+</fieldset>
 
 <%= link_to 'Back', incidentals_path %>
