--- a/app/views/labors/index.html.erb
+++ b/app/views/labors/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing labors</h1>
+<h1>Labor</h1>
 
 <table>
   <thead>
@@ -29,3 +29,7 @@
 <br>
 
 <%= link_to 'New Labor', new_labor_path %>
+
+<p>&nbsp;<br />&nbsp;</p>
+
+<%= link_to 'Home', root_url %>
