--- a/app/views/materials/new.html.erb
+++ b/app/views/materials/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New material</h1>
+<h1>New Material</h1>
 
-<%= render 'form' %>
+<fieldset>
+  <legend>Enter new material information</legend>
+  <%= render 'form' %>
+</fieldset>
 
 <%= link_to 'Back', materials_path %>
