--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,12 +1,9 @@
-<h1>Listing customers</h1>
+<h1>Customers</h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
-      <th>Contact</th>
-      <th>Telephone</th>
-      <th>Email</th>
       <th></th>
       <th></th>
       <th></th>
@@ -17,9 +14,6 @@
     <% @customers.each do |customer| %>
       <tr>
         <td><%= customer.name %></td>
-        <td><%= customer.contact %></td>
-        <td><%= customer.telephone %></td>
-        <td><%= customer.email %></td>
         <td><%= link_to 'Show', customer %></td>
         <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
         <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -31,3 +25,7 @@
 <br>
 
 <%= link_to 'New Customer', new_customer_path %>
+
+<p>&nbsp;<br />&nbsp;</p>
+
+<%= link_to 'Home', root_url %>
