--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New customer</h1>
+<h1>New Customer</h1>
 
-<%= render 'form' %>
+<fieldset>
+  <legend>Enter new customer information</legend>
+  <%= render 'form' %>
+</fieldset>
 
 <%= link_to 'Back', customers_path %>
