--- a/app/views/labors/new.html.erb
+++ b/app/views/labors/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New labor</h1>
+<h1>New Labor</h1>
 
-<%= render 'form' %>
+<fieldset>
+  <legend>Enter new labor information</legend>
+  <%= render 'form' %>
+</fieldset>
 
 <%= link_to 'Back', labors_path %>
