--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Landing Page</h1>
 <p><%= link_to 'Customers', customers_url %></p>
+<p><%= link_to 'Contacts', contacts_url %></p>
 <p><%= link_to 'Labor', labors_url %></p>
 <p><%= link_to 'Equipment', equipmentals_url %></p>
 <p><%= link_to 'Materials', materials_url %></p>
