--- a/app/views/materials/index.html.erb
+++ b/app/views/materials/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing materials</h1>
+<h1>Materials</h1>
 
 <table>
   <thead>
@@ -33,3 +33,7 @@
 <br>
 
 <%= link_to 'New Material', new_material_path %>
+
+<p>&nbsp;<br />&nbsp;</p>
+
+<%= link_to 'Home', root_url %>
