Completed customer contact stuff. It will most like be upgraded to include a first and last name.

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New contact for <%= @customer.name %></h1>
+<h1>New contact</h1>
 
   <fieldset>
     <legend>Enter new contact information</legend>
