--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Customer:</strong>
+  <%= @contact.customer.name %>
+</p>
+
+<p>
   <strong>Telephone:</strong>
   <%= @contact.telephone %>
 </p>
