--- a/app/assets/stylesheets/customers.css.scss
+++ b/app/assets/stylesheets/customers.css.scss
@@ -1,3 +1,64 @@
 // Place all the styles related to the Customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+html.customers {
+  background: #E6FAFF;
+}
+body.customers {
+  background: #E6FAFF;
+}
+table#customer_show {
+  width: 80%;
+  border: 1px solid #cceeff;
+  color: b0e6ff;
+  margin-top: 5px;
+  margin-right: 0;
+  margin-bottom: 25px;
+  margin-left: 0;
+  text-align: left;
+  thead {
+    color: b0e6ff;
+  }
+  tbody {
+    background: b0e6ff;
+  }
+  th {
+    font-weight: bold;
+    background-color: #aaccff;
+    border-bottom: 1px solid #436E99;
+    padding: 4px 5px;
+  }
+
+  td {
+    padding: 4px 5px;
+  }
+  tr.odd {
+    background-color: #CCE0FF;
+    border-bottom: 1px solid #cceeff;
+  }
+
+}
+table#customer_contacts_edit {
+  width: 80%;
+  border: 1px solid #cceeff;
+  margin-top: 5px;
+  margin-right: 0;
+  margin-bottom: 5px;
+  margin-left: 0;
+  text-align: left;
+
+  th {
+    font-weight: bold;
+    background-color: #aaccff;
+    border-bottom: 1px solid #436E99;
+    padding: 4px 5px;
+  }
+
+  td {
+    padding: 4px 5px;
+  }
+  tr.odd {
+    background-color: #CCE0FF;
+    border-bottom: 1px solid #cceeff;
+  }
+}
