--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -4,18 +4,22 @@
       <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
 
       <ul>
-      <% @customer.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
+        <% @customer.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <strong><%= f.label :name %></strong>
     <%= f.text_field :name %>
   </div>
 
+    <h3>Contacts</h3>
+    <%= render :partial => "contacts", :locals => {:f => f} %>
+
+  <p>&nbsp;</p>
   <div class="actions">
     <%= f.submit %>
   </div>
