--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -4,3 +4,4 @@
 <p><%= link_to 'Labor', labors_url %></p>
 <p><%= link_to 'Equipment', equipmentals_url %></p>
 <p><%= link_to 'Materials', materials_url %></p>
+<p><%= link_to 'Orders', orders_url %></p>
