--- a/app/views/orders/_edit_form.html.erb
+++ b/app/views/orders/_edit_form.html.erb
@@ -13,20 +13,21 @@
 
 
   <div class="field">
-    <%= f.label :customer_id %>
-    <%= f.select :customer_id, options_for_select(@customers.collect{ |custard| [custard.name, custard.id]}) %>
+    <p><strong>Customer:</strong> <%= @order.customer.name %></p>
   </div>
 
   <div class="field">
-    <%= f.label :description %><br>
+    <p><strong>Order: <%= @order.id %></strong></p>
+  </div>
+
+  <div class="field">
+    <b><%= f.label :description %></b><br>
     <%= f.text_area :description, cols: 60, rows: 10 %>
   </div>
-
   <div class="field">
-    <%= f.label :quantity %><br>
+    <b><%= f.label :quantity %></b><br>
     <%= f.number_field :quantity %>
   </div>
-
   <div class="actions">
     <%= f.submit %>
   </div>
