--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,9 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>Quote</th>
-      <th>Work order</th>
-      <th>Invoice</th>
+      <th>Customer</th>
       <th>Description</th>
       <th>Quantity</th>
       <th></th>
@@ -17,9 +15,7 @@
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= order.quote_id %></td>
-        <td><%= order.work_order_id %></td>
-        <td><%= order.invoice_id %></td>
+        <td><%= order.customer.name %></td>
         <td><%= order.description %></td>
         <td><%= order.quantity %></td>
         <td><%= link_to 'Show', order %></td>
@@ -33,3 +29,7 @@
 <br>
 
 <%= link_to 'New Order', new_order_path %>
+
+<p>&nbsp;<br />&nbsp;</p>
+
+<%= link_to 'Home', root_url %>
