--- a/app/views/labors/show.html.erb
+++ b/app/views/labors/show.html.erb
@@ -16,4 +16,5 @@
 </p>
 
 <%= link_to 'Edit', edit_labor_path(@labor) %> |
-<%= link_to 'Back', labors_path %>
+<%= link_to 'Back', labors_path %> |
+<%= link_to 'New', new_labor_path %>
