--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -26,4 +26,6 @@
 </p>
 
 <%= link_to 'Edit', edit_material_path(@material) %> |
-<%= link_to 'Back', materials_path %>
+<%= link_to 'Back', materials_path %> |
+<%= link_to 'New', new_material_path %>
+
