--- a/app/views/orders/_edit_form.html.erb
+++ b/app/views/orders/_edit_form.html.erb
@@ -17,17 +17,20 @@
   </div>
 
   <div class="field">
-    <p><strong>Order: <%= @order.id %></strong></p>
+    <p><strong>Order: <%= @order.order_number %></strong></p>
   </div>
 
   <div class="field">
     <b><%= f.label :description %></b><br>
     <%= f.text_area :description, cols: 60, rows: 10 %>
   </div>
-  <div class="field">
-    <b><%= f.label :quantity %></b><br>
-    <%= f.number_field :quantity %>
-  </div>
+
+    <%= render :partial => "materials", :locals => {:f => f} %>
+
+    <%= render :partial => "labors", :locals => {:f => f} %>
+
+    <%= render :partial => "equipmentals", :locals => {:f => f} %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
