--- a/app/views/orders/_materials.html.erb
+++ b/app/views/orders/_materials.html.erb
@@ -1,7 +1,7 @@
 <div id="order_materials_edit">
   <fieldset>
     <legend>Materials</legend>
-  <table id="order_materials_form">
+  <table id="editmaterials">
     <thead>
     <tr>
       <th>Quantity</th>
@@ -22,6 +22,6 @@
     <% end %>
     </tbody>
   </table>
-  <a href="#" class="add">add equipment</a>
+  <a href="#" class="add">add material</a>
     </fieldset>
 </div>
