--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -26,6 +26,9 @@
     </tbody>
   </table>
 
+  <% @customer.orders.each do |order| %>
+    <p><%= link_to order.order_number, order %>, <%= order.description %></p>
+  <% end %>
 
 <%= link_to 'Edit', edit_customer_path(@customer) %> |
 <%= link_to 'Back', customers_path %>
