--- a/app/views/orders/_equipmentals.html.erb
+++ b/app/views/orders/_equipmentals.html.erb
@@ -1,19 +1,19 @@
 <div id="order_equipmentals_edit">
   <fieldset>
     <legend>Equipment</legend>
-    <table border="0" cellspacing="0" cellpadding="0">
+    <table id="editequipmentals">
       <thead>
       <tr>
-        <th>Quantity</th>
-        <th>Item</th>
+        <th id="quantity">Qty</th>
+        <th id="equipmental">Item</th>
         <th></th>
       </tr>
       </thead>
       <tbody class="items">
       <%= f.nested_fields_for :equipmental_line_items do |f| %>
         <tr class="item">
-          <td><%= f.text_field :quantity %></td>
-          <td><%= f.select :equipmental_id, @equipmentals.map { |equip| [equip.name, equip.id] } %></td>
+          <td id="quantity"><%= f.text_field :quantity %></td>
+          <td id="equipmental"><%= f.select :equipmental_id, @equipmentals.map { |equip| [equip.name, equip.id] } %></td>
           <td>
             <a href="#" class="remove">remove</a>
             <%= f.hidden_field :_destroy %>
