--- a/app/views/orders/_labors.html.erb
+++ b/app/views/orders/_labors.html.erb
@@ -1,19 +1,19 @@
 <div id="order_labors_edit">
   <fieldset>
     <legend>Labor</legend>
-    <table id="order_labors_form">
+    <table id="editlabors">
       <thead>
       <tr>
-        <th>Quantity</th>
-        <th>Item</th>
+        <th id="quantity">Qty</th>
+        <th id="labor">Item</th>
         <th></th>
       </tr>
       </thead>
       <tbody class="items">
       <%= f.nested_fields_for :labor_line_items do |f| %>
         <tr class="item">
-          <td><%= f.text_field :quantity %></td>
-          <td><%= f.select :labor_id, @labors.map { |lab| [lab.name, lab.id] } %></td>
+          <td id="quantity"><%= f.text_field :quantity %></td>
+          <td id="labor"><%= f.select :labor_id, @labors.map { |lab| [lab.name, lab.id] } %></td>
           <td>
             <a href="#" class="remove">remove</a>
             <%= f.hidden_field :_destroy %>
@@ -22,6 +22,6 @@
       <% end %>
       </tbody>
     </table>
-    <a href="#" class="add">add equipment</a>
+    <a href="#" class="add">add labor</a>
   </fieldset>
 </div>
