--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -5,3 +5,4 @@
 <p><%= link_to 'Equipment', equipmentals_url %></p>
 <p><%= link_to 'Materials', materials_url %></p>
 <p><%= link_to 'Orders', orders_url %></p>
+<p><%= link_to 'Work Orders', work_orders_url %></p>
