--- a/app/views/orders/_edit_form.html.erb
+++ b/app/views/orders/_edit_form.html.erb
@@ -4,35 +4,59 @@
       <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
 
       <ul>
-      <% @order.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
+        <% @order.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
 
+  <div id="ordervitals">
+    <div class="field">
+      <p><strong>Customer:</strong> <%= @order.customer.name %></p>
+    </div>
 
-  <div class="field">
-    <p><strong>Customer:</strong> <%= @order.customer.name %></p>
+    <div class="field">
+      <p><strong>Order: <%= @order.order_number %></strong></p>
+    </div>
   </div>
 
-  <div class="field">
-    <p><strong>Order: <%= @order.order_number %></strong></p>
+  <div id="orderdates">
+    <div class="field">
+      <b><%= f.label :completion_date %></b>
+      <%= f.text_field :completion_date, :value => date_mdY(@order.completion_date), :class => 'datepicker', style: "text-align: right" %>
+    </div>
+
+    <div class="field">
+      <b><%= f.label :quantity %></b>
+      <%= f.number_field :quantity %>
+    </div>
   </div>
 
-  <div class="field">
-    <b><%= f.label :description %></b><br>
-    <%= f.text_area :description, cols: 60, rows: 10 %>
-  </div>
-  <div id="materialsvendors">
-    <%= render :partial => "materials", :locals => {:f => f} %>
-  </div>
-  <div id="laborequipmentals">
-    <%= render :partial => "labors", :locals => {:f => f} %>
+  <p class="clearboth"></p>
+    <div class="field">
+      <b><%= f.label :description %></b>
+      <%= f.text_area :description, cols: 60, rows: 2 %>
+    </div>
 
-    <%= render :partial => "equipmentals", :locals => {:f => f} %>
+
+  <div id="order_drop_downs">
+    <div id="materialsvendors">
+      <%= render :partial => "materials", :locals => {:f => f} %>
+
+      <%= render :partial => "vendors", :locals => {:f => f} %>
+    </div>
+    <div id="laborequipmentals">
+      <%= render :partial => "labors", :locals => {:f => f} %>
+
+      <%= render :partial => "equipmentals", :locals => {:f => f} %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <p class="clearboth"></p>
+
+  <div id="order_submit">
+    <div class="actions">
+      <%= f.submit %>
+    </div>
   </div>
 <% end %>
