--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -4,39 +4,55 @@
       <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
 
       <ul>
-      <% @order.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
+        <% @order.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
 
-
   <div class="field">
     <%= f.label :customer_id %>
-    <%= f.select :customer_id, options_for_select(@customers.collect{ |custard| [custard.name, custard.id]}) %>
+    <%= f.select :customer_id, options_for_select(@customers.collect { |custard| [custard.name, custard.id] }) %>
   </div>
 
   <div class="field">
-    <%= f.label :description %><br>
+    <%= f.label :completion_date %>
+    <br/>
+    <%= f.text_field :completion_date, :value => date_mdY(@order.completion_date), :class => 'datepicker', style: "text-align: right" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :description %>
+    <br>
     <%= f.text_area :description, cols: 60, rows: 10 %>
   </div>
 
   <div class="field">
-    <%= f.label :quantity %><br>
+    <%= f.label :quantity %>
+    <br>
     <%= f.number_field :quantity %>
   </div>
 
   <div id="materialsvendors">
     <%= render :partial => "materials", :locals => {:f => f} %>
+    <%= render :partial => "vendors", :locals => {:f => f} %>
   </div>
   <div id="laborequipmentals">
     <%= render :partial => "labors", :locals => {:f => f} %>
     <%= render :partial => "equipmentals", :locals => {:f => f} %>
-
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <p class="clearboth"></p>
+
+  <div class="field">
+    <%= f.label :incidentals %>
+    <%= f.number_field :incidentals %>
+  </div>
+
+  <div id="order_submit">
+    <div class="actions">
+      <%= f.submit %>
+    </div>
   </div>
 <% end %>
