--- a/app/views/orders/_materials.html.erb
+++ b/app/views/orders/_materials.html.erb
@@ -4,16 +4,16 @@
   <table id="editmaterials">
     <thead>
     <tr>
-      <th>Quantity</th>
-      <th>Item</th>
+      <th id="quantity">Quantity</th>
+      <th id="material">Item</th>
       <th></th>
     </tr>
     </thead>
     <tbody class="items">
     <%= f.nested_fields_for :material_line_items do |f| %>
       <tr class="item">
-        <td><%= f.text_field :quantity %></td>
-        <td><%= f.select :material_id, @materials.map { |matter| [matter.name, matter.id] } %></td>
+        <td id="quantity"><%= f.number_field :quantity, min: 1 %></td>
+        <td id="material"><%= f.select :material_id, @materials.map { |matter| [matter.name, matter.id] } %></td>
         <td>
           <a href="#" class="remove">remove</a>
           <%= f.hidden_field :_destroy %>
